--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="p-3">
 <div class="container mt-4">
-    <h1 class="text-center display-4 mb-4">HAWK SUJAL SPAMMER PRO</h1>
+    <h1 class="text-center display-4 mb-4">𝐔ᴊᴊᴜ 𝐒ᴘᴀᴍs</h1>
     <div class="text-center mb-4">
         <span class="badge bg-danger fs-4 px-4 py-2">{{ text }}</span>
         <span class="badge bg-success fs-4 ms-2 px-4 py-2">SENT: {{ sent }}</span>
